// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Text Component correctly 1`] = `
<h1
  className="sc-hMqMXs bhKVEp"
>
  Das ist ein Text
</h1>
`;

exports[`renders the Text Component correctly 2`] = `
<h2
  className="sc-kEYyzF eFocWD"
>
  Das ist ein Text
</h2>
`;

exports[`renders the Text Component correctly 3`] = `
<h3
  className="sc-kkGfuU hxwkUt"
>
  Das ist ein Text
</h3>
`;

exports[`renders the Text Component correctly 4`] = `
<h4
  className="sc-iAyFgw ismhoG"
>
  Das ist ein Text
</h4>
`;

exports[`renders the Text Component correctly 5`] = `
<h5
  className="sc-hSdWYo xJZVC"
>
  Das ist ein Text
</h5>
`;

exports[`renders the Text Component correctly 6`] = `
<h6
  className="sc-eHgmQL lcDntY"
>
  Das ist ein Text
</h6>
`;

exports[`renders the Text Component correctly 7`] = `
<p
  className="sc-cvbbAY gqkHTt"
>
  Das ist ein Text
</p>
`;

exports[`renders the Text Component correctly 8`] = `
<a
  className="sc-jWBwVP fXWvGZ"
>
  Das ist ein Text
</a>
`;

exports[`renders the Text Component correctly 9`] = `
<span
  className="sc-cMljjf kADAfR"
>
  Das ist ein Text
</span>
`;

exports[`renders the Text Component correctly 10`] = `
<label
  className="sc-brqgnP dbfYkm"
>
  Das ist ein Text
</label>
`;

exports[`renders the Text Component correctly 11`] = `
<span
  className="sc-cMljjf efEOEe"
  color="error"
  scale="xl"
>
  Das ist ein Text
</span>
`;
